--- a/index.html
+++ b/index.html
@@ -1,1 +1,178 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cristian Camilo Ramírez Flórez | Portafolio</title>
+  <meta name="description" content="Analista de Datos | Power BI | Python | SQL. Portafolio de proyectos, experiencia y certificaciones." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <a class="skip" href="#contenido">Saltar al contenido</a>
+
+  <header class="header">
+    <nav class="nav">
+      <div class="brand">
+        <span class="dot" aria-hidden="true"></span>
+        <span>CCRF</span>
+      </div>
+
+      <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="navLinks">
+        Menú
+      </button>
+
+      <div class="nav-links" id="navLinks">
+        <a href="#sobre-mi">Sobre mí</a>
+        <a href="#habilidades">Habilidades</a>
+        <a href="#experiencia">Experiencia</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#certificaciones">Certificaciones</a>
+        <a href="#contacto">Contacto</a>
+        <button class="theme" id="themeBtn" type="button" aria-label="Cambiar tema">🌓</button>
+      </div>
+    </nav>
+  </header>
+
+  <main id="contenido" class="container">
+    <section class="hero">
+      <div class="hero-left">
+        <h1>
+          Cristian Camilo Ramírez Flórez
+        </h1>
+        <p class="subtitle">
+          Analista de Datos | Power BI | Python | SQL
+        </p>
+
+        <p class="lead">
+          Analista de Datos con más de 15 años de experiencia en logística, operaciones y análisis de procesos.
+          Enfocado en KPIs, visualización, ETL, automatización de reportes y analítica predictiva.
+        </p>
+
+        <div class="cta">
+          <a class="btn primary" href="#proyectos">Ver proyectos</a>
+          <a class="btn" href="#contacto">Contactar</a>
+        </div>
+
+        <ul class="quick">
+          <li><span class="pill">Itagüí, Antioquia</span></li>
+          <li><span class="pill">Power BI</span></li>
+          <li><span class="pill">Python</span></li>
+          <li><span class="pill">SQL</span></li>
+        </ul>
+      </div>
+
+      <aside class="card hero-card" aria-label="Tarjeta de contacto rápido">
+        <h2 class="card-title">Contacto</h2>
+        <div class="kv">
+          <div class="k">Teléfono</div>
+          <div class="v"><a href="tel:+573014787996">+57 301 478 7996</a></div>
+
+          <div class="k">Email</div>
+          <div class="v"><a href="mailto:ccramirez84@gmail.com">ccramirez84@gmail.com</a></div>
+
+          <div class="k">LinkedIn</div>
+          <div class="v"><a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/cristian-ramirez-88189586">/cristian-ramirez-88189586</a></div>
+
+          <div class="k">GitHub</div>
+          <div class="v"><a target="_blank" rel="noreferrer" href="https://github.com/ccramirez84">@ccramirez84</a></div>
+        </div>
+      </aside>
+    </section>
+
+    <section id="sobre-mi" class="section">
+      <h2>Sobre mí</h2>
+      <div class="grid-2">
+        <div class="card">
+          <h3 class="card-title">Perfil</h3>
+          <p>
+            Especializado en análisis de datos con Power BI, Python, SQL y Excel avanzado,
+            definición y seguimiento de KPIs, análisis predictivo de demanda y automatización de reportes
+            para la toma de decisiones. Actualmente en formación en Ciencia de Datos.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3 class="card-title">Enfoque</h3>
+          <ul class="bullets">
+            <li>Dashboards ejecutivos y operativos (Power BI)</li>
+            <li>ETL y preparación de datos (Power Query / Python)</li>
+            <li>Análisis exploratorio y estadística aplicada</li>
+            <li>Modelos predictivos básicos para negocio</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="habilidades" class="section">
+      <h2>Habilidades</h2>
+      <div class="card">
+        <div class="chips" id="skillsChips"></div>
+      </div>
+    </section>
+
+    <section id="experiencia" class="section">
+      <h2>Experiencia</h2>
+      <div class="timeline" id="timeline"></div>
+    </section>
+
+    <section id="proyectos" class="section">
+      <div class="section-head">
+        <h2>Proyectos</h2>
+        <div class="filters">
+          <input id="search" type="search" placeholder="Buscar proyecto…" autocomplete="off" />
+          <select id="tag">
+            <option value="all">Todas las tecnologías</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="projects" id="projects"></div>
+
+      <div class="note">
+        <p>
+          *Los enlaces llevan a GitHub. Si quieres, luego mejoramos cada repo con README, capturas y resultados.
+        </p>
+      </div>
+    </section>
+
+    <section id="certificaciones" class="section">
+      <h2>Educación y certificaciones</h2>
+      <div class="grid-2" id="certs"></div>
+    </section>
+
+    <section id="contacto" class="section">
+      <h2>Contacto</h2>
+      <div class="grid-2">
+        <div class="card">
+          <h3 class="card-title">¿Hablamos?</h3>
+          <p>
+            Si quieres, dime qué tipo de rol buscas (Data Analyst / BI / Logistics Analytics)
+            y ajusto el portafolio para que apunte a ese perfil.
+          </p>
+          <div class="cta">
+            <a class="btn primary" href="mailto:ccramirez84@gmail.com?subject=Contacto%20-%20Portafolio%20GitHub%20Pages">Enviar email</a>
+            <a class="btn" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/cristian-ramirez-88189586">Abrir LinkedIn</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3 class="card-title">Descarga CV</h3>
+          <p>
+            Puedes subir tu CV en PDF al repo y enlazarlo aquí (ej: <code>/assets/CV.pdf</code>).
+          </p>
+          <a class="btn" href="#" onclick="alert('Cuando subas tu PDF, reemplaza este enlace por /assets/CV.pdf'); return false;">
+            Añadir enlace al CV
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>© <span id="year"></span> Cristian Camilo Ramírez Flórez · Hecho con GitHub Pages</p>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
