--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       <div class="note">
         <p>
-          *Los enlaces llevan a GitHub. Si quieres, luego mejoramos cada repo con README, capturas y resultados.
+          *Los enlaces llevan a GitHub.
         </p>
       </div>
     </section>
