--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
           <p>
             Puedes subir tu CV en PDF al repo y enlazarlo aquí (ej: <code>/assets/CV.pdf</code>).
           </p>
-          <a class="btn" href="#" onclick="alert('Cuando subas tu PDF, reemplaza este enlace por /assets/CV.pdf'); return false;">
-            Añadir enlace al CV
+         <a class="btn" href="assets/CV.pdf" target="_blank" rel="noreferrer">
+  Ver CV (PDF)
+         </a>
+
           </a>
         </div>
       </div>
