--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         <div class="card">
           <h3 class="card-title">¿Hablamos?</h3>
           <p>
-            Si quieres, dime qué tipo de rol buscas (Data Analyst / BI / Logistics Analytics)
-            y ajusto el portafolio para que apunte a ese perfil.
+            <!--Si quieres, dime qué tipo de rol buscas (Data Analyst / BI / Logistics Analytics)
+            y ajusto el portafolio para que apunte a ese perfil.-->
           </p>
           <div class="cta">
             <a class="btn primary" href="mailto:ccramirez84@gmail.com?subject=Contacto%20-%20Portafolio%20GitHub%20Pages">Enviar email</a>
